fix hr and extra space at right window

--- a/source/main.css
+++ b/source/main.css
@@ -5,6 +5,7 @@ head,
 body {
   background: #e5e5e5;
   margin: 0 0;
+  overflow-x: hidden;
   color: #2e4756;
   font-family: "Poppins", sans-serif;
 }
@@ -43,9 +44,16 @@ h2 {
   margin-top: 0;
 }
 
+#header-divider {
+  border: 1px solid #000000 !important;
+  margin-left: 7rem !important;
+  margin-right: 5rem !important;
+}
+
+
 hr {
   border: 1px solid #000000;
-  transform: rotate(-0.08deg);
+  /* transform: rotate(-0.08deg); */
 }
 
 
