--- a/source/stats_page/stats.css
+++ b/source/stats_page/stats.css
@@ -1,6 +1,7 @@
 body {
     font-family: "Poppins", sans-serif;
     font-size: 12px;
+    overflow-x: hidden;
 }
 
 img {
